Fix Request village popup close event and spacing of villages list in side menu

--- a/public/css/side-menu.css
+++ b/public/css/side-menu.css
@@ -20,7 +20,7 @@
 }
 
 .side-menu__villages {
-  padding-top: 1rem;
+  padding-top: 2.5rem;
   -webkit-flex: 1;
   -moz-flex: 1;
   -ms-flex: 1;
